menu z-index bug is fixed

--- a/css/common.css
+++ b/css/common.css
@@ -879,7 +879,11 @@ textarea {
 /* section */
 /* ---------------------------------------END--- */
 /* main-nav */
-/* --------------------------------------------- */.main-nav.is-open {
+/* --------------------------------------------- */
+.main-nav {
+  position: relative;
+  z-index: 2;
+}.main-nav.is-open {
   display: block !important;
 }
 .main-nav__lst {
@@ -1980,7 +1984,7 @@ select option {
   left: -10px;
   right: -10px;
   bottom: 100%;
-  margin-bottom: 4px;
+  margin-bottom: 3px;
   height: 32px;
   line-height: 32px;
   font-weight: normal;
