--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -311,6 +311,8 @@
 /* --------------------------------------------- */
 
 .main-nav
+	position: relative
+	z-index: 2
 
 	+max-screen($mq_menu)
 		position: absolute
@@ -1546,7 +1548,7 @@ select
 		left: -10px
 		right: -10px
 		bottom: 100%
-		margin-bottom: 4px
+		margin-bottom: 3px
 		height: 32px
 		line-height: 32px
 		font-weight: normal
